# GameOfLife

./: .gitignore  CMakeLists.txt
src/: Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  ImageButton.cpp  ImageButton.hpp  Main.cpp
